--- a/skin/frontend/greenfarm/default/scss/module/_checkout-cart-minicart.scss
+++ b/skin/frontend/greenfarm/default/scss/module/_checkout-cart-minicart.scss
@@ -29,6 +29,7 @@
 
 .header-minicart {
     display: inline-block;
+    vertical-align: middle;
 
     @include bp(max-width, $bp-medium) {
         display: block;
