--- a/skin/frontend/greenfarm/default/css/styles-ie8.css
+++ b/skin/frontend/greenfarm/default/css/styles-ie8.css
@@ -2144,6 +2144,19 @@ body.customer-account .data-table .show-details .summary-collapse:hover:before {
 }
 
 /* ============================================ *
+ * block-banner
+ * ============================================ */
+.block-banner {
+  display: block;
+  margin-bottom: 20px;
+  text-align: center;
+}
+.block-banner img {
+  max-width: 100%;
+  display: inline-block;
+}
+
+/* ============================================ *
  * FORMS - COMMON
  * ============================================ */
 /* -------------------------------------------- *
@@ -2700,6 +2713,28 @@ body {
   max-width: 100%;
 }
 
+.form-language {
+  width: 140px;
+  height: 30px;
+  overflow: hidden;
+  background: url(../images/select-dow.png) no-repeat 96% center;
+  border: 1px solid #C0C0C0;
+}
+.form-language select {
+  width: 110%;
+  height: 30px;
+  padding: 5px;
+  /* If you add too much padding here, the options won't show in IE */
+  border: none;
+  color: #E6E6E6;
+  font-size: 14px;
+  background: transparent;
+  cursor: pointer;
+}
+.form-language select option {
+  color: #000000;
+}
+
 .header-grid {
   background-color: #3399CC;
 }
@@ -2719,7 +2754,7 @@ body {
 .header-grid .list li,
 .header-grid .store-language {
   display: inline-block;
-  vertical-align: top;
+  vertical-align: middle;
 }
 .header-grid .list {
   color: #ffffff;
@@ -2731,8 +2766,12 @@ body {
   color: #ffffff;
   margin-left: 5px;
 }
+.header-grid .list a:focus, .header-grid .list a:hover {
+  color: #f90;
+  text-decoration: none;
+}
 .header-grid .list label {
-  margin-right: 10px;
+  margin-left: 10px;
 }
 
 /* ============================================ *
@@ -2784,6 +2823,14 @@ body {
 
 .skip-links {
   border: 0;
+}
+
+/* -------------------------------------------- *
+ * block-account
+ */
+.block-account {
+  display: inline-block;
+  vertical-align: middle;
 }
 
 /* -------------------------------------------- *
@@ -3194,8 +3241,8 @@ a.skip-link {
   display: block;
   position: absolute;
   z-index: 200;
-  top: 40px;
-  right: 115px;
+  top: 100%;
+  left: 0;
   width: 200px;
 }
 
@@ -3407,6 +3454,7 @@ a.skip-link {
   clear: both;
   width: 100%;
   padding-top: 30px;
+  padding-bottom: 10px;
   background-color: #131313;
   border-top: 1px solid #CCCCCC;
   font-size: 14px;
@@ -3459,8 +3507,9 @@ a.skip-link {
   background-image: url(../images/icon-twitter.png);
 }
 .footer .block-title {
-  border-bottom: 0;
   padding: 3px 0;
+  margin-bottom: 0;
+  border: none;
 }
 .footer .block-title strong {
   font-weight: normal;
@@ -3487,11 +3536,7 @@ a.skip-link {
   color: #f90;
 }
 .footer .block-subscribe {
-  float: right;
-  width: 320px;
   margin-bottom: 30px;
-}
-.footer .block-subscribe {
   font-size: 12px;
 }
 .footer .form-subscribe-header {
@@ -3558,9 +3603,6 @@ a.skip-link {
   -webkit-border-radius: 0;
   border-radius: 0;
 }
-.footer .block-subscribe .block-content {
-  padding-top: 7px;
-}
 .footer .block-subscribe .block-content:after {
   content: '';
   display: table;
@@ -3572,9 +3614,10 @@ a.skip-link {
   margin: 0;
 }
 .footer .block-subscribe .actions .button {
+  float: none;
+  width: 100%;
   height: 30px;
   line-height: 17px;
-  float: left;
 }
 .footer .bugs,
 .footer address {
@@ -4967,6 +5010,7 @@ p.product-name a:hover {
 }
 .products-items .products_grid .item {
   margin-bottom: 15px;
+  margin-left: 0;
   display: inline-block;
   vertical-align: top;
   position: relative;
@@ -5056,6 +5100,16 @@ p.product-name a:hover {
 }
 .products-items .product-info {
   padding: 10px;
+}
+.products-items .product-info .add-to-links {
+  margin: 0;
+  padding-top: 10px;
+  list-style: none;
+}
+.products-items .product-info .add-to-links li {
+  margin-left: 0;
+  display: inline-block;
+  vertical-align: middle;
 }
 .products-items .product-name {
   font-size: 14px;
@@ -7489,10 +7543,6 @@ div.paypal-logo span > img {
   -webkit-tap-highlight-color: transparent;
   -webkit-touch-callout: none;
 }
-.owl-carousel .owl-item img {
-  display: block;
-  width: 100%;
-}
 .owl-carousel .owl-nav.disabled,
 .owl-carousel .owl-dots.disabled {
   display: none;
@@ -7574,9 +7624,6 @@ div.paypal-logo span > img {
 .owl-carousel .owl-nav .disabled:focus, .owl-carousel .owl-nav .disabled:hover {
   background-position: 0 0;
 }
-.owl-carousel .owl-nav.disabled + .owl-dots {
-  margin-top: 10px;
-}
 .owl-carousel .owl-dots {
   text-align: center;
   -webkit-tap-highlight-color: transparent;
@@ -7589,7 +7636,7 @@ div.paypal-logo span > img {
 .owl-carousel .owl-dots .owl-dot span {
   width: 10px;
   height: 10px;
-  margin: 30px;
+  margin: 0 5px;
   background: #333333;
   display: block;
   -webkit-backface-visibility: visible;
@@ -7773,6 +7820,7 @@ div.paypal-logo span > img {
  * ============================================ */
 .header-minicart {
   display: inline-block;
+  vertical-align: middle;
 }
 .header-minicart .minicart-message {
   display: block;
