--- a/skin/frontend/greenfarm/default/scss/layout/_footer.scss
+++ b/skin/frontend/greenfarm/default/scss/layout/_footer.scss
@@ -34,6 +34,7 @@
     clear: both;
     width: 100%;
     padding-top: $trim;
+    padding-bottom: $box-spacing;
     background-color: $color03;
     border-top: 1px solid $c-module-border;
     font-size: $f-size;
@@ -91,8 +92,9 @@
     }
 
     .block-title {
-        border-bottom: 0;
         padding: 3px 0;
+        margin-bottom: 0;
+        border: none;
     }
 
     .block-title strong {
@@ -124,12 +126,7 @@
     }
 
     .block-subscribe {
-        float: right;
-        width: 320px;
         margin-bottom: $trim;
-    }
-
-    .block-subscribe {
         font-size: $f-size-xs;
     }
 
@@ -176,36 +173,33 @@
 
     // ---------------------------------------------
 
-    .block-subscribe .input-box {
-        float: left;
-        width: percentage(210px/320px);
-        padding-top: 0;
-    }
-
-    .block-subscribe .input-text {
-        width: 100%;
-        border-right: 0;
-        @include border-radius(0);
-    }
-
-    .block-subscribe .block-content {
-        padding-top: 7px;
-
-        &:after {
-            @include clearfix;
+    .block-subscribe {
+        .input-box {
+            float: left;
+            width: percentage(210px/320px);
+            padding-top: 0;
         }
-    }
-
-    .block-subscribe .actions {
-        float: left;
-        width: percentage(110px/320px);
-        margin: 0;
-    }
-
-    .block-subscribe .actions .button {
-        height: 30px;
-        line-height: 17px;
-        float: left;
+        .input-text {
+            width: 100%;
+            border-right: 0;
+            @include border-radius(0);
+        }
+        .block-content {
+            &:after {
+                @include clearfix;
+            }
+        }
+        .actions {
+            float: left;
+            width: percentage(110px/320px);
+            margin: 0;
+            .button {
+                float: none;
+                width: 100%;
+                height: 30px;
+                line-height: 17px;
+            }
+        }
     }
 
     .bugs,
