--- a/skin/frontend/greenfarm/default/scss/module/_slideshow.scss
+++ b/skin/frontend/greenfarm/default/scss/module/_slideshow.scss
@@ -246,8 +246,8 @@
         -webkit-tap-highlight-color: transparent;
         -webkit-touch-callout: none;
         img {
-            display: block;
-            width: 100%;
+            //display: block;
+            //width: 100%;
         }
     }
     .owl-nav.disabled,
@@ -351,7 +351,7 @@
 
     // Styling dots
     .owl-nav.disabled + .owl-dots {
-        margin-top: 10px;
+        //margin-top: 10px;
     }
 
     .owl-dots {
@@ -366,7 +366,7 @@
             span {
                 width: $gap;
                 height: $gap;
-                margin: $trim;
+                margin: 0 5px;
                 background: $c-gray;
                 display: block;
                 -webkit-backface-visibility: visible;
