--- a/skin/frontend/greenfarm/default/scss/_core.scss
+++ b/skin/frontend/greenfarm/default/scss/_core.scss
@@ -55,6 +55,7 @@
 @import "layout/header-account";
 @import "layout/header-cart";
 @import "layout/footer";
+@import "layout/row";
 
 // ----------------------------------------------
 // Modules
