--- a/skin/frontend/greenfarm/default/scss/_var.scss
+++ b/skin/frontend/greenfarm/default/scss/_var.scss
@@ -52,6 +52,8 @@ $bp-medium: 770px;
 $bp-large: 979px;
 $bp-xlarge: 1199px;
 
+$grid-columns: 12 !default;
+
 // =============================================
 // Base Values
 // =============================================
@@ -103,6 +105,8 @@ $color04: #f90;
 $color05: #999;
 $color06: #8a8a8a;
 $color07: #444;
+$color08: #e0e0e0;
+$color09: #222;
 
 // =============================================
 // Base Colors
